# libsync3

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
benches/: comparison.rs
examples/: buzhash_basic.rs  buzhash_comparison.rs  buzhash_rolling.rs  file_sync.rs  simple_sync.rs
src/: buzhash.rs  lib.rs  rolling.rs
tests/: basic_tests.rs  buzhash_proptests.rs  proptest_delta.rs  serde_tests.rs  verification.rs
