[package]
name = "libsync3"
authors = ["Bruno Chenoll <brunochenoll@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT or Apache-2.0"
description = "Simple librsync implementation for Rust but using BLAKE3 instead of BLAKE2b"
homepage = "https://github.com/Bechma/libsync3"
repository = "https://github.com/Bechma/libsync3"
keywords = ["blake3", "delta", "patch", "sync", "signature"]
readme = "README.md"

[dependencies]
blake3 = { version = "1.8.2" }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
proptest = "1.9.0"
serde_json = "1.0"

[features]
default = []
serde = ["dep:serde", "blake3/serde"]
buzhash = []

[[example]]
name = "buzhash_basic"
required-features = ["buzhash"]

[[example]]
name = "buzhash_rolling"
required-features = ["buzhash"]

[[example]]
name = "buzhash_comparison"
required-features = ["buzhash"]

[lints.clippy]
pedantic = "warn"
