[package]
name = "libsync3"
authors = ["Bruno Chenoll <brunochenoll@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT or Apache-2.0"
description = "Simple librsync implementation for Rust using xxhash3 instead of BLAKE2b"
homepage = "https://github.com/Bechma/libsync3"
repository = "https://github.com/Bechma/libsync3"
keywords = ["xxhash3", "delta", "patch", "sync", "signature"]
readme = "README.md"

[[bench]]
name = "comparison"
harness = false

[dependencies]
rayon = "1.11.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[dev-dependencies]
librsync = "0.2.5"
criterion = "0.8.1"

[lints.clippy]
pedantic = "warn"
